clean up comments

--- a/4-daily-summary-table.ipynb
+++ b/4-daily-summary-table.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "1. This code will grab info for any date when the animal had an entry in the `Sessions` table or the `Mass` table.\n",
     "\n",
-    "2. It is pulling the restriction volume from the `Water` table. This volume only gets entered if pub is run that day. If there is no entry, it defaults to 4% for mice and 3% for rats. "
+    "2. It is pulling the restriction volume from the `Water` table. This volume only gets entered if pub is run that day. If there is no entry, it defaults to 4% for mice and 3% for rats. To know when this is happening set `verbose = True` on the `fetch_daily_water_target` call."
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
