--- a/4-daily-summary-table.ipynb
+++ b/4-daily-summary-table.ipynb
@@ -22,20 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-28 13:17:50,848][INFO]: Connecting jbreda@bdata00.pni.princeton.edu:3306\n",
-      "[2023-05-28 13:17:51,644][INFO]: Connected jbreda@bdata00.pni.princeton.edu:3306\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
-    "from create_summary_table import fetch_daily_summary_info\n",
+    "from create_summary_table import create_daily_summary_from_dj\n",
     "from plot_summary_table import *\n",
     "\n",
     "import seaborn as sns\n",
@@ -74,27 +74,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-05-29 12:41:13,300][WARNING]: MySQL server has gone away. Reconnecting to the server.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mass data not found for A325 on 2023-05-10, but animal trained using previous days mass\n",
-      "fetched 14 daily summaries for A325 between 2023-05-01 and 2023-05-15\n"
+      "mass data not found for A325 on 2023-05-10, using previous days mass\n",
+      "fetched 9 daily summaries for A325 between 2023-05-01 and 2023-05-11\n"
      ]
     }
    ],
    "source": [
     "ANIMAL_ID = [\"A325\"]\n",
     "\n",
+    "\n",
     "animal_df = fetch_daily_summary_info(animal_ids=ANIMAL_ID, date_min=\"2023-05-01\", date_max=\"2023-05-15\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -102,30 +110,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 26 entries, 0 to 25\n",
-      "Data columns (total 18 columns):\n",
+      "RangeIndex: 9 entries, 0 to 8\n",
+      "Data columns (total 15 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   animal_id       26 non-null     object \n",
-      " 1   date            26 non-null     object \n",
-      " 2   rigid           14 non-null     object \n",
-      " 3   n_done_trials   14 non-null     float64\n",
-      " 4   n_sessions      26 non-null     int64  \n",
-      " 5   start_time      14 non-null     object \n",
-      " 6   train_dur_hrs   26 non-null     float64\n",
-      " 7   trial_rate      14 non-null     float64\n",
-      " 8   hit_rate        14 non-null     float64\n",
-      " 9   viol_rate       14 non-null     float64\n",
-      " 10  side_bias       14 non-null     float64\n",
-      " 11  mass            26 non-null     float64\n",
-      " 12  tech            25 non-null     object \n",
-      " 13  percent_target  26 non-null     float64\n",
-      " 14  pub_volume      26 non-null     float64\n",
-      " 15  rig_volume      26 non-null     float64\n",
-      " 16  volume_target   26 non-null     float64\n",
-      " 17  water_diff      26 non-null     float64\n",
-      "dtypes: float64(12), int64(1), object(5)\n",
-      "memory usage: 3.8+ KB\n"
+      " 0   animal_id       9 non-null      object \n",
+      " 1   date            9 non-null      object \n",
+      " 2   rigid           9 non-null      object \n",
+      " 3   n_done_trials   9 non-null      int64  \n",
+      " 4   n_sessions      9 non-null      int64  \n",
+      " 5   start_time      9 non-null      object \n",
+      " 6   train_dur_hrs   9 non-null      float64\n",
+      " 7   trial_rate      9 non-null      float64\n",
+      " 8   mass            9 non-null      float64\n",
+      " 9   tech            9 non-null      object \n",
+      " 10  percent_target  9 non-null      float64\n",
+      " 11  pub_volume      9 non-null      float64\n",
+      " 12  rig_volume      9 non-null      float64\n",
+      " 13  volume_target   9 non-null      float64\n",
+      " 14  water_diff      9 non-null      float64\n",
+      "dtypes: float64(8), int64(2), object(5)\n",
+      "memory usage: 1.2+ KB\n"
      ]
     }
    ],
@@ -795,30 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2023-05-29 09:42:14,997][WARNING]: MySQL server has gone away. Reconnecting to the server.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fetched 15 daily summaries for R610 between 2023-05-15 and 2023-05-29\n",
-      "fetched 14 daily summaries for W600 between 2023-05-15 and 2023-05-28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load in \n",
     "\n",
     "MULTIANIMAL_IDS = [\"R610\", \"W600\"]\n",
-    "mutlianimal_df = fetch_daily_summary_info(animal_ids=MULTIANIMAL_IDS, date_min=\"2023-05-15\")"
+    "mutlianimal_df = create_daily_summary_from_dj(animal_ids=MULTIANIMAL_IDS, date_min=\"2023-05-15\", date_max=\"2023-05-30\")"
    ]
   },
   {
@@ -945,44 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I want to write a function that takes in a list of animal_ids, date_min, date_max,\n",
-    "#  overwrite bool, save_path, save_out, and f_name. It will return a dataframe.\n",
-    "\n",
-    "# if overwrite is True, then it will overwrite the file at save_path/f_name and fully load the\n",
-    "# data frame from a datajoint server given date_min and date_max.\n",
-    "\n",
-    "# if overwrite is false. It will check if the file exists at save_path/f_name. If it does, it will\n",
-    "# load the file and check to see if there are any dates in the date_min, date_max range that are\n",
-    "# not in the dataframe. If there are, it will load the missing dates from the datajoint server\n",
-    "# and append them to the dataframe. If there are no missing dates, it will return the dataframe.\n",
-    "\n",
-    "# if save_out is true, it will save the dataframe to save_path/f_name\n",
-    "\n",
-    "def fetch_daily_summary_info(animal_ids, date_min, date_max, overwrite, save_path, f_name, save_out):\n",
-    "\n",
-    "    # check if overwrite is on\n",
-    "    if overwrite:\n",
-    "        #check to see if save_path/f_name exists using Path library\n",
-    "        if Path(save_path/f_name).exists():\n",
-    "            # if it does, load the dataframe\n",
-    "            df = pd.read_csv(save_path/f_name)\n",
-    "\n",
-    "            # get date range in df and see if it is the same as date_min, date_max\n",
-    "            df_date_min = df.date.min()\n",
-    "            df_date_max = df.date.max()\n",
-    "            # determine if there are any dates not covered & which dates to load\n",
-    "            \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +985,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2023, 5, 15)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mutlianimal_df.date.iloc[0].type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,25 +1015,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddf = pd.read_csv(full_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('2023-05-15', '2023-05-29')"
+       "WindowsPath('c:/Users/JB/github/DataJoint-SQL-Tutorial/mutlianimal_df.csv')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_path = Path(save_dir).joinpath(f_name)\n",
+    "full_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# full_path = Path(save_dir).joinpath(f_name)\n",
+    "\n",
+    "ddf = pd.read_csv(full_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2023-05-15', '2023-05-20')"
+      ]
+     },
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,51 +1068,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['R610, W600'], dtype='<U10')"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "animal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
-    "from IPython.core.debugger import set_trace as dbstop\n",
     "# given a date_min, date_max I want to see if the dataframe has any missing dates\n",
     "overwrite = True\n",
-    "date_min = \"2023-05-13\"\n",
-    "date_max = \"2023-05-29\"\n",
+    "date_min = \"2023-05-10\"\n",
+    "date_max = \"2023-05-12\"\n",
     "animal_ids = [\"R610\", \"W600\"]\n",
     "animals_daily_summary_df = []\n",
     "# save_path =\"as/f/d/jkahsdf\"\n",
-    "save_dir = \"/Users/jessbreda/Desktop/github/DataJoint-SQL-Tutorial\"\n",
+    "save_dir = os.getcwd()\n",
     "f_name= \"mutlianimal_df.csv\"\n",
     "\n",
     "full_path = Path(save_dir).joinpath(f_name)\n",
     "\n",
     "\n",
-    "def get_daily_summary_df(\n",
+    "def lazy_load_daily_summary_df(\n",
     "        animal_ids=[\"R610\", \"W600\"], \n",
     "        date_min=\"2000-01-01\", \n",
     "        date_max=\"2030-01-01\", \n",
-    "        overwrite=True, \n",
     "        save_dir=os.getcwd(), \n",
     "        f_name=\"mutlianimal_df.csv\", \n",
     "        save_out=False, \n",
@@ -1125,59 +1098,107 @@
     "):\n",
     "    full_path = Path(save_dir).joinpath(f_name)\n",
     "\n",
-    "    if overwrite and full_path.exists():\n",
-    "        print(\"it's here!\")\n",
+    "    if full_path.exists():\n",
+    "\n",
+    "        # load in matching pre-saved df\n",
     "        pre_saved_df = pd.read_csv(full_path)\n",
     "\n",
-    "        # determine if there are any dates not covered & which dates to load\n",
-    "        print(\"checkin new dates\")\n",
+    "        # check that all animals are in the pre-saved df\n",
     "        excluded_animals = np.setdiff1d(animal_ids, pre_saved_df.animal_id.unique())\n",
-    "        if len(excluded_animals):\n",
-    "            print(f\"Pre-saved df does not contain {excluded_animals}! overwrite functionality assumes all animals are in the df.\")\n",
-    "            return None\n",
-    "        \n",
+    "        assert len(excluded_animals) == 0, (\n",
+    "            f\"Pre-saved df does not contain {excluded_animals}! \"\n",
+    "            \"Overwrite functionality assumes all animals are in the DataFrame.\"\n",
+    "        )\n",
+    "\n",
+    "        # check if there are any new dates to load\n",
     "        new_dates = pd.date_range(start=date_min, end=date_max).difference(\n",
     "            pd.date_range(start=pre_saved_df.date.min(), end=pre_saved_df.date.max())\n",
     "        )\n",
+    "\n",
     "        if not len(new_dates):\n",
-    "            # no new dates to load, append the previously saved df\n",
-    "            print(f\"Loaded prev-saved df with entries between {date_min} and {date_max}.\")\n",
-    "            return pre_saved_df\n",
+    "            # no new dates to load, append the previously saved df    \n",
+    "            print(f\"Loaded pre-saved df with entries between {date_min} and {date_max}.\")\n",
+    "            return pre_saved_df.query(\"date >=@date_min and date <=@date_max\")\n",
+    "        \n",
+    "        # there are new dates to fetch, so we need to update or min and max dates\n",
+    "        new_min = new_dates.min().strftime(\"%Y-%m-%d\") # min date not in pre-saved df\n",
+    "        new_max = new_dates.max().strftime(\"%Y-%m-%d\") # max date not in pre-saved df\n",
+    "\n",
+    "        if new_max < date_max:\n",
+    "            print(f\"partial dj load with new date min {date_max} -> {new_max}\")\n",
+    "            pre_saved_df = pre_saved_df.query(\"date <=@date_max\")\n",
+    "            date_max = new_max \n",
+    "        elif new_min > date_min:\n",
+    "            print(f\"partial dj load with new date min {date_min} -> {new_min}\")\n",
+    "            pre_saved_df = pre_saved_df.query(\"date >=@date_min\")\n",
+    "            date_min = new_min\n",
     "        else:\n",
-    "            # update date min and max to account for new dates\n",
-    "            date_min = new_dates.min().strftime(\"%Y-%m-%d\")\n",
-    "            date_max = new_dates.max().strftime(\"%Y-%m-%d\")\n",
-    "            print(f\"doing partial load and appending new dates between {date_min} and {date_max}\")\n",
+    "            print(f\"The provided date window is larger than the whole DataFrame. \"\n",
+    "                f\"Only pne-sided lazy loading can be performed. \"\n",
+    "                f\"\\nReturning the pre-saved DataFrame \"\n",
+    "                f\"with dates between {pre_saved_df.date.min()} and {pre_saved_df.date.max()}.\")\n",
+    "            return pre_saved_df\n",
     "    else:\n",
-    "        print(f\"No pre-saved df found, loading from datajoint.\")\n",
-    "\n"
+    "        print(f\"No pre-saved df found, fetching from datajoint.\")\n",
+    "\n",
+    "    # load in new data\n",
+    "    dj_df = create_daily_summary_from_dj(animal_ids=animal_ids, date_min=date_min, date_max=date_max, verbose=verbose)\n",
+    "\n",
+    "    # append if we have a pre-saved df\n",
+    "    # TODO add in a save out option\n",
+    "    if 'pre_saved_df' in locals() and isinstance(pre_saved_df, pd.DataFrame):\n",
+    "        appended_df = pd.concat([pre_saved_df, dj_df], ignore_index=True)\n",
+    "        appended_df['date'] = pd.to_datetime(appended_df['date']).dt.date\n",
+    "        print(f\"Returning appended df with entries between {appended_df.date.min()} and {appended_df.date.max()}\")\n",
+    "        return appended_df.sort_values(by=[\"animal_id\", \"date\"]).reset_index(drop=True)\n",
+    "    else:\n",
+    "        print(f\"Returning dj df with entries between {date_min} and {date_max}\")\n",
+    "        return dj_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "it's here!\n",
-      "checkin new dates\n",
-      "doing partial load and appending new dates between 2023-05-13 and 2023-05-14\n"
+      "Loaded prev-saved df with entries between 2023-05-16 and 2023-05-19.\n",
+      "query min: 2023-05-16 returned min: 2023-05-16, \n",
+      "query max: 2023-05-19 returned_max: 2023-05-19\n"
      ]
     }
    ],
    "source": [
-    "get_daily_summary_df(date_min=date_min, date_max=date_max)"
+    "date_min = \"2023-05-16\"\n",
+    "date_max = \"2023-05-19\"\n",
+    "\n",
+    "df = lazy_load_daily_summary_df(date_min=date_min, date_max=date_max)\n",
+    "\n",
+    "print(f\"query min: {date_min} returned min: {df.date.min()}, \\nquery max: {date_max} returned_max: {df.date.max()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2023-05-10 00:00:00'), Timestamp('2023-05-29 00:00:00'))"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.date.min(), df.date.max()"
+   ]
   },
   {
    "attachments": {},
